2001-05-30  Larry Ewing  <lewing@ximian.com>

	* htmlimage.c (image_update_url): temp hack to piggyback url
	selection onto point calculation.  
	(check_point): call image_update_url.
	(html_image_set_usemap): add.
	(html_image_init): initialize usemap.
	(destroy): free usemap.
	(copy): dup usemap.

	* htmlimage.h: add html_image_set_usemap prototype, and usemap
	member.

	* htmlmap.h: format change ;)

	* htmlengine.c (parse_i): add the map to the image
	(parse_m): fix length.

	* htmlframeset.c (calc_min_width): add hack to force size
	calculation when the widget gets a new allocation.
	(forall): fix this.
	(is_container): add.
	remove debug g_warnings.

2001-05-29  Larry Ewing  <lewing@ximian.com>

	* htmltokenizer.c (end_tag): remove frameset warnings.

	* htmlengine.h: add new members for frame and map support.

	* htmlengine.c (close_anchor): remove extra if.
	(parse_frameset): new function to handle framsets.
	(parse_iframe): cleanup attribute parsing, add stubs.
	(parse_a): add initial area handling, misc cleanups.
	(parse_f): add frame and frameset parsing.
	(parse_m): add initial map handling.
	(parse_n): add stub fror noframe handling.
	(html_engine_init): initialize framestack and map.

	* htmlclueflow.c (save_plain): fix the wraping function that was
	broken in the move to g_unicode.

	* htmlenums.h: add new types.

	* htmltype.c (html_types_init): init new types.
	(html_type_name): add new types.

	* htmltypes.h: add new types.

	* Makefile.am: add new files.

	* gtkhtml.c (on_object): remove redundant checks.
	(set_pointer_url): move logic here.

	* htmlframeset.h:
	* htmlframeset.c:
	* htmlframe.c:
	* htmlframe.h:
	* htmlmap.c:
	* htmlmap.h:
	* htmlshape.c:
	* htmlshape.h: Commit pending files without hooking them into the
	build so that I can use cvs to track revisions.

2001-05-29  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-clueflowstyle.c
	(html_engine_get_current_clueflow_alignment): use
	html_clueflow_get_halignment
