@@ -60,7 +60,6 @@ typedef enum {
 	HTML_CLUEFLOW_STYLE_ITEMDOTTED,
 	HTML_CLUEFLOW_STYLE_ITEMROMAN,
 	HTML_CLUEFLOW_STYLE_ITEMDIGIT,
-	HTML_CLUEFLOW_STYLE_NOWRAP,
 	HTML_CLUEFLOW_NUMSTYLES
 } HTMLClueFlowStyle;
 
